--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react-scripts": "5.0.1",
     "react-toastify": "^9.1.2",
     "redux-persist": "^6.0.0",
+    "svg-react-loader": "^0.4.6",
     "web-vitals": "^2.1.3"
   },
   "scripts": {
