--- a/package.json
+++ b/package.json
@@ -4,7 +4,6 @@
   "private": true,
   "homepage": "https://Bellmere.github.io/3D-Anatomy/",
   "dependencies": {
-    "@reduxjs/toolkit": "^1.9.3",
     "@testing-library/jest-dom": "^5.16.3",
     "@testing-library/react": "^12.1.4",
     "@testing-library/user-event": "^13.5.0",
@@ -16,11 +15,11 @@
     "react-dom": "^18.1.0",
     "react-helmet-async": "^1.3.0",
     "react-loader-spinner": "^5.3.4",
-    "react-redux": "^8.0.5",
+    "react-pro-sidebar": "^1.0.0",
     "react-router-dom": "^6.10.0",
     "react-scripts": "5.0.1",
+    "react-select": "^5.7.2",
     "react-toastify": "^9.1.2",
-    "redux-persist": "^6.0.0",
     "svg-react-loader": "^0.4.6",
     "web-vitals": "^2.1.3"
   },
