--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "mobx-react-lite": "^3.4.3",
     "nanoid": "^4.0.2",
     "react": "^18.1.0",
+    "react-detect-click-outside": "^1.1.7",
     "react-dom": "^18.1.0",
     "react-helmet-async": "^1.3.0",
     "react-loader-spinner": "^5.3.4",
