--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.3.4",
     "firebase": "^9.19.1",
+    "firebase-tools": "^11.29.1",
     "mobx-react-lite": "^3.4.3",
     "nanoid": "^4.0.2",
     "react": "^18.1.0",
