--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "react-template",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://Bellmere.github.io/3D-Anatomy/",
+  "homepage": "/",
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.3",
     "@testing-library/react": "^12.1.4",
@@ -18,6 +18,7 @@
     "react-helmet-async": "^1.3.0",
     "react-loader-spinner": "^5.3.4",
     "react-pro-sidebar": "^1.0.0",
+    "react-quill": "^2.0.0",
     "react-router-dom": "^6.10.0",
     "react-scripts": "5.0.1",
     "react-select": "^5.7.2",
