--- a/package.json
+++ b/package.json
@@ -15,8 +15,10 @@
     "react": "^18.1.0",
     "react-detect-click-outside": "^1.1.7",
     "react-dom": "^18.1.0",
+    "react-full-screen": "^1.1.1",
     "react-helmet-async": "^1.3.0",
     "react-loader-spinner": "^5.3.4",
+    "react-new-window": "^1.0.1",
     "react-pro-sidebar": "^1.0.0",
     "react-quill": "^2.0.0",
     "react-router-dom": "^6.10.0",
