--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "mobx-react-lite": "^3.4.3",
     "nanoid": "^4.0.2",
     "react": "^18.1.0",
+    "react-color": "^2.19.3",
     "react-detect-click-outside": "^1.1.7",
     "react-dom": "^18.1.0",
     "react-full-screen": "^1.1.1",
